[tool.poetry]
name = "python-base"
version = "0.1.0"
description = "This repository is a code base for python for the purpose of development and code reuse"
authors = ["faa-99 <farahakoum1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
elasticsearch = "7.14.1"
typer = {extras = ["all"], version = "^0.7.0"}
PyYAML = "^6.0"
jupyter = "^1.0.0"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
mypy = "0.942"
black = "22.3.0"
isort = "5.10.1"
flake8 = "4.0.1"
sphinx = "4.5.0"
sphinx-rtd-theme = "1.0.0"

[tool.isort]
profile = "black"
lines_after_imports = "2"

[tool.mypy]
# --strict
ignore_missing_imports = true
# --strict end

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
